# theory_craft_ta

./: .gitignore  CHECKLIST_TA.md  CHECKLIST_TA_MULTI.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  ht_trendline_reference.txt  mix.exs  test_data_helper.exs  test_ht_trendline.py
.examples/: sar_reference.py
.github/workflows/: ci.yml  release.yml  rust-ci.yml
.tools/: run_benchmark.cmd  run_ci.cmd
benchmarks/: dema_benchmark.exs  dema_state_benchmark.exs  ema_benchmark.exs  ema_state_benchmark.exs  ht_trendline_benchmark.exs  ht_trendline_state_benchmark.exs  kama_benchmark.exs  kama_state_benchmark.exs  list_append_benchmark.exs  midpoint_benchmark.exs  midpoint_state_benchmark.exs  midprice_benchmark.exs  midprice_state_benchmark.exs  sma_benchmark.exs  sma_state_benchmark.exs  t3_benchmark.exs  t3_state_benchmark.exs  tema_benchmark.exs  trima_benchmark.exs  trima_state_benchmark.exs  wma_benchmark.exs  wma_state_benchmark.exs
config/: config.exs  dev.exs  prod.exs  test.exs
lib/: theory_craft_ta.ex
lib/theory_craft_ta/: helpers.ex  native.ex  ta.ex
lib/theory_craft_ta/elixir/: overlap.ex
lib/theory_craft_ta/native/: overlap.ex
native/theory_craft_ta/: Cargo.toml  Cross.toml  README.md  build.rs
native/theory_craft_ta/src/: helpers.rs  lib.rs  overlap.rs  overlap_ffi.rs  overlap_state.rs
native/theory_craft_ta/tools/: build_talib.cmd  build_talib.sh
test/: test_helper.exs  theory_craft_ta_test.exs
test/theory_craft_ta/: helpers_test.exs  overlap_test.exs  ta_test.exs
tools/: build_talib.cmd  build_talib.sh
(+108 files in other folders)
