[package]
name = "theory_craft_ta"
version = "0.1.0"
authors = []
edition = "2021"
# build = "build.rs"  # Temporarily disabled to test musl compilation

[lib]
name = "theory_craft_ta"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"

[features]
default = ["nif_version_2_15"]

# Feature necessary for Rustler Precompiled
nif_version_2_15 = ["rustler/nif_version_2_15"]
